Update the blog URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "public"]
 	path = public
-	url = git@github.com:ShinoYasx/shinoyasx.github.io.git
+	url = git@github.com:HaldiH/haldih.github.io.git
 [submodule "theme/fuji"]
 	path = themes/fuji
 	url = https://github.com/amzrk2/hugo-theme-fuji.git
